fixed alignment and added css

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -2,9 +2,8 @@
   text-align: center;
   color: white;
   background-color: #0d7bff;
-  margin-top: 160px;
+  margin-top: 20px;
   margin-bottom: 0;
-  display: block;
 }
 
 .footerText {
